[gd_scene load_steps=3 format=2]

[ext_resource path="res://Script/PresentSpawner.gd" type="Script" id=1]
[ext_resource path="res://SFX/pop.ogg" type="AudioStream" id=2]

[node name="PresentSpawner" type="Position2D"]
script = ExtResource( 1 )

[node name="IdleTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="VisibilityNotifier2D" type="VisibilityEnabler2D" parent="."]

[node name="PopSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[connection signal="timeout" from="IdleTimer" to="." method="_on_IdleTimer_timeout"]
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
